[project]
name = "anicli-ru"
# todo: bump ver via script
version="5.0.16"
description = 'cli tool for watching anime'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "vypivshiy"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "anicli-api>=0.7.6",
    "eggella>=0.1.7",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.9",
]

[project.scripts]
anicli-ru = "anicli:run_cli"

[project.urls]
Documentation = "https://github.com/vypivshiy/ani-cli-ru#readme"
Issues = "https://github.com/vypivshiy/ani-cli-ru/issues"
Source = "https://github.com/vypivshiy/ani-cli-ru"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anicli/"]

[tool.ruff]
target-version = "py38"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # print function allowed in CLI client
  "T201",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]
