[project]
name = "anicli-ru"
version="6.1.1"
description = 'cli tool for watching anime'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "vypivshiy"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "anicli-api>=0.8.11",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
cookies = [
    "rookiepy>=0.5.6",
]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.9",
]
web = [
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "uvicorn>=0.33.0",
    "python-multipart>=0.0.20",
    "segno>=1.6.6",
]

# web + cookies
all = [
    "anicli-api>=0.8.8",
    "prompt-toolkit>=3.0.52",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "rookiepy>=0.5.6",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "uvicorn>=0.33.0",
    "python-multipart>=0.0.20",
    "segno>=1.6.6",
]


[project.scripts]
anicli-ru = "anicli.main:main"

[project.urls]
Documentation = "https://github.com/vypivshiy/ani-cli-ru#readme"
Issues = "https://github.com/vypivshiy/ani-cli-ru/issues"
Source = "https://github.com/vypivshiy/ani-cli-ru"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anicli/"]

[tool.ruff]
target-version = "py38"
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]

lint.ignore = [
  "RUF001",  # allow single cyrillic letters (H, c) etc
  "RUF002",
  # print function allowed in CLI client
  "T201",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]
